src/tests/cases/snapshots/jett__tests__cases__ui__small_width_long_folder_name.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 20.0K | /tmp/jett_tests/sm[...]h_long_folder_name
┌────────────────────────────────────────────────┐
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                     file2                      │
│                                                │
│                   8.0K (40%)                   │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
├────────────────────────────────────────────────┤
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                     file3                      │
│                                                │
│                                                │
│                   8.0K (40%)                   │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
├────────────────────────────────────────────────┤
│                                                │
│                                                │
│                     file1                      │
│                                                │
│                                                │
│                   4.0K (20%)                   │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
                                                  
 ←↓↑→: navigate, ⌫: del, <t>: themes  DRY-RUN OFF
